# rust-template

./: .gitignore  Cargo.toml  LICENSE  README.md  build.rs
.github/workflows/: ci.yml
src/: cli.rs  lib.rs
