[package]
name = "rust-template"
description = "Template repository for rust command-line utilities"
version = "0.1.0"
edition = "2024"
authors = ["Leandro Lisboa Penz <lpenz@lpenz.org>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/lpenz/rust-template"
repository = "https://github.com/lpenz/rust-template"
build = "build.rs"
categories = ["command-line-utilities"]
keywords = ["command-line"]

[dependencies]
clap = { version = "4.6.2", features = ["derive"] }
clap2man = "0.1.1"
clap_complete = "4.6.7"
color-eyre = "0.6.5"
man = "0.3.0"
tokio = { version = "1.53.0", features = ["macros", "rt"] }
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }

[build-dependencies]
clap = { version = "4.6.2", features = ["derive"] }
clap2man = "0.1.1"
clap_complete = "4.6.7"
color-eyre = "0.6.5"
man = "0.3.0"
[package.metadata.deb]
section = "utils"
extended-description = """\
Template repository for rust command-line utilities
"""
assets = [
    ["target/release/rust-template.1", "usr/share/man/man1/", "644"],
    ["target/release/rust-template", "usr/bin/", "755"],
    ["LICENSE", "usr/share/doc/rust-template/", "644"],
    ["AUTHORS", "usr/share/doc/rust-template/", "644"],
    ["README.md", "usr/share/doc/rust-template/", "644"],
    ["target/release/rust-template.bash", "/usr/share/bash-completion/completions/", "644"],
    ["target/release/_rust-template", "/usr/share/zsh/site-functions/", "644"],
    ["target/release/rust-template.fish", "/usr/share/fish/vendor_completions.d/", "644"],
]

[package.metadata.generate-rpm]
assets = [
    { source = "target/release/rust-template.1", dest = "/usr/share/man/man1/", mode = "644" },
    { source = "target/release/rust-template", dest = "/usr/bin/", mode = "755" },
    { source = "LICENSE", dest = "/usr/share/doc/rust-template/", mode = "644" },
    { source = "AUTHORS", dest = "/usr/share/doc/rust-template/", mode = "644" },
    { source = "README.md", dest = "/usr/share/doc/rust-template/", mode = "644" },
    { source = "target/release/rust-template.bash", dest = "/usr/share/bash-completion/completions/", mode = "644" },
    { source = "target/release/_rust-template", dest = "/usr/share/zsh/site-functions/", mode = "644" },
    { source = "target/release/rust-template.fish", dest = "/usr/share/fish/vendor_completions.d/", mode = "644" },
]
